# EngineQA

./: .env.example  .gitignore  AGENTS.md  Makefile  PROGRESS.md  README.md  plan.md  steps.md
backend/: Cargo.toml
backend-python/: README.md  requirements.txt
backend/src/: lib.rs  main.rs
backend/src/api/: error_code.rs  error_mapping.rs  feedback.rs  mod.rs  query.rs  reindex.rs  status.rs
backend/src/config/: mod.rs
backend/src/indexer/: mod.rs
backend/src/observability/: mod.rs
backend/src/provider/: mod.rs
backend/src/rag/: mod.rs
backend/src/vector_store/: lancedb_store.rs  mod.rs
deploy/: qdrant-compose.yaml
docs/: acceptance-criteria.md  deployment.md  runbook.md  startup-manual.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
knowledge/: ad-optimization-scenario-01-fill-rate-zero.md  ad-optimization-scenario-02-ctr-drop-after-creative-change.md  ad-optimization-scenario-03-cvr-drop-with-stable-ctr.md  ad-optimization-scenario-04-cpm-spike.md  ad-optimization-scenario-05-budget-underdelivery.md  ad-optimization-scenario-06-frequency-fatigue.md  ad-optimization-scenario-07-cold-start-no-impression.md  ad-optimization-scenario-08-geo-target-mismatch.md  ad-optimization-scenario-09-dayparting-misconfig.md  ad-optimization-scenario-10-conversion-feedback-delay.md  fill.md  hello.md
scripts/: acceptance-test.sh  dev-python.sh  dev-rust.sh  dev.sh  load-test-payload.json  load-test.sh  run-qdrant.sh  security-check.sh  smoke-step-01.sh  smoke-step-13.sh
(+24 files in other folders)
